Fix video overflowing camera popup

--- a/examples/solomo/devshop-demo.css
+++ b/examples/solomo/devshop-demo.css
@@ -22,11 +22,6 @@ html, body {
   height: 100%;
 }
 
-.viewfinder {
-  text-align: center;
-  padding: 10px;
-}
-
 .center {
   text-align: center;
 }
