--- a/packages/mdg:camera/camera.less
+++ b/packages/mdg:camera/camera.less
@@ -29,6 +29,10 @@
     text-align: center;
   }
 
+  #video {
+    width: 280px;
+  }
+
   .center {
     text-align: center;
   }
